[tool.poetry]
name = "ska-tango-tangogql"
version = "1.4.8"
description = ""
authors = ["HFRibeiro <helder.ribeiro@atlar.pt>"]
license = "BSD-3-Clause"
packages = [
    { include = "tangogql", from = "tangogql" }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "3.5.4"
aiohttp_cors = "0.7.0"
aiohttp-devtools = "0.12"
aniso8601 = "3.0.0"
async-timeout = "3.0.0"
attrs = "21.2.0"
bson = "0.5.5"
chardet = "3.0.4"
Cython = "0.28.4"
graphene = "2.1.3"
graphql-core = "2.1"
graphql-relay = "0.4.5"
graphql-ws = "0.3.0"
idna = "2.6"
idna_ssl = "1.1.0"
multidict = "4.3.1"
promise = "2.2.1"
PyJWT = "1.7.1"
python-dateutil = "2.7.3"
Rx = "1.6.1"
typing = "3.6.4"
yarl = "1.2.4"
async_generator = "1.10"
PyYAML = "5.2"
asynctest = "0.13.0"
isort = "5.9.1"
numpy = "^1.19.2"
pytango = "^9.3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-bdd = "^4.0.1"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.4.0"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.0.1"
pytest-pydocstyle = "^2.2.0"
pytest-pycodestyle = "^2.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
