[tool.poetry]
name = "ska-tango-tangogql-ariadne"
version = "1.0.0"
description = ""
authors = ["HFRibeiro <helder.ribeiro@atlar.pt>"]
license = "BSD-3-Clause"
packages = [
    { include = "tangogql", from = "tangogql-ariadne" }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
debugpy = "^1.5.1"
numpy = "^1.26.1"
pytango = "^9.5.0"
ariadne = "^0.23.0"
uvicorn = "^0.31.1"
python-dateutil = "^2.9.0.post0"
aiocache = "^0.12.3"
aiodataloader = "^0.4.0"
pyjwt = "^2.9.0"
pydantic-settings = "^2.5.2"
setuptools = "^75.1.0"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
coverage = "^7.5.1"
flake8 = "^7.0.0"
isort = "^5.13.0"
nbmake = {extras = ["all"], version = "^1.5.0"}
nbqa = {extras = ["all"], version = "^1.8.0"}
pylint = "^3.1.0"
pylint-junit = "^0.3.2"
pytest = "^8.2.0"
pytest-bdd = "^7.1.2"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.14.0"
pytest-repeat = "^0.9.3"
pytest-timeout = "^2.3.1"
yamllint = "^1.32.0"
httpx = "^0.27.2"
pytest-asyncio= "^0.24.0"
requests = "^2.32.3"

[tool.poetry.group.docs.dependencies]
myst-parser = "^3.0.0"
ska-ser-sphinx-theme = "^0.1.2"
Sphinx = "^7.3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
